[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Controller.gd" type="Script" id=1]
[ext_resource path="res://Asset/icons_set/icons_128/cursor_right.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Sun.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Planet.tscn" type="PackedScene" id=4]
[ext_resource path="res://Asset/icons_set/icons_128/pause.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Prediction.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Camera2D.gd" type="Script" id=7]
[ext_resource path="res://Scripts/UI.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Moon.tscn" type="PackedScene" id=9]

[node name="Main" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -311.0
margin_right = 370.0
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="CanvasLayer/Panel"]
margin_right = 490.0
margin_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="CheckButton" parent="CanvasLayer/Panel/Control"]
margin_left = 17.1185
margin_top = 16.1964
margin_right = 157.118
margin_bottom = 152.196
rect_scale = Vector2( 0.2, 0.2 )
focus_mode = 0
custom_icons/off = ExtResource( 2 )
custom_icons/on = ExtResource( 5 )
expand_icon = true

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Panel/Control"]
anchor_left = 0.821
anchor_right = 0.821
margin_left = -332.29
margin_top = 2.0
margin_right = 86.71
margin_bottom = 54.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Panel/Control/GridContainer"]
margin_right = 561.0
margin_bottom = 52.0

[node name="MassLabel" type="Label" parent="CanvasLayer/Panel/Control/GridContainer/HBoxContainer"]
margin_top = 19.0
margin_right = 33.0
margin_bottom = 33.0
text = "Mass"

[node name="Mass" type="SpinBox" parent="CanvasLayer/Panel/Control/GridContainer/HBoxContainer"]
margin_left = 37.0
margin_right = 111.0
margin_bottom = 52.0
max_value = 1e+14
step = 10.0
allow_greater = true

[node name="PositionLabel" type="Label" parent="CanvasLayer/Panel/Control/GridContainer/HBoxContainer"]
margin_left = 115.0
margin_top = 19.0
margin_right = 167.0
margin_bottom = 33.0
text = "Position"

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/Panel/Control/GridContainer/HBoxContainer"]
margin_left = 171.0
margin_right = 245.0
margin_bottom = 52.0

[node name="X" type="SpinBox" parent="CanvasLayer/Panel/Control/GridContainer/HBoxContainer/VBoxContainer2"]
margin_right = 74.0
margin_bottom = 24.0
min_value = -100000.0
max_value = 100000.0
step = 10.0
allow_greater = true
allow_lesser = true
prefix = "X"

[node name="Y" type="SpinBox" parent="CanvasLayer/Panel/Control/GridContainer/HBoxContainer/VBoxContainer2"]
margin_top = 28.0
margin_right = 74.0
margin_bottom = 52.0
min_value = -100000.0
max_value = 100000.0
step = 10.0
allow_greater = true
allow_lesser = true
prefix = "Y"

[node name="InitialVelocityLabel" type="Label" parent="CanvasLayer/Panel/Control/GridContainer/HBoxContainer"]
margin_left = 249.0
margin_top = 19.0
margin_right = 341.0
margin_bottom = 33.0
text = "Initial Velocity"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel/Control/GridContainer/HBoxContainer"]
margin_left = 345.0
margin_right = 419.0
margin_bottom = 52.0

[node name="X" type="SpinBox" parent="CanvasLayer/Panel/Control/GridContainer/HBoxContainer/VBoxContainer"]
margin_right = 74.0
margin_bottom = 24.0
min_value = -100000.0
max_value = 100000.0
step = 10.0
allow_greater = true
allow_lesser = true
prefix = "X"

[node name="Y" type="SpinBox" parent="CanvasLayer/Panel/Control/GridContainer/HBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 74.0
margin_bottom = 52.0
min_value = -100000.0
max_value = 100000.0
step = 10.0
allow_greater = true
allow_lesser = true
prefix = "Y"

[node name="UniversalValuesLabel" type="Label" parent="CanvasLayer/Panel/Control/GridContainer/HBoxContainer"]
margin_left = 423.0
margin_top = 10.0
margin_right = 483.0
margin_bottom = 41.0
text = "Universal
Values"
align = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="CanvasLayer/Panel/Control/GridContainer/HBoxContainer"]
margin_left = 487.0
margin_right = 561.0
margin_bottom = 52.0

[node name="DistanceMultiplier" type="SpinBox" parent="CanvasLayer/Panel/Control/GridContainer/HBoxContainer/VBoxContainer3"]
margin_right = 74.0
margin_bottom = 24.0
max_value = 1e+14
step = 10.0
allow_greater = true
prefix = "D"

[node name="BigG" type="SpinBox" parent="CanvasLayer/Panel/Control/GridContainer/HBoxContainer/VBoxContainer3"]
margin_top = 28.0
margin_right = 74.0
margin_bottom = 52.0
max_value = 20.0
step = 0.001
allow_greater = true
allow_lesser = true
prefix = "G"

[node name="CelBodyName" type="Label" parent="CanvasLayer/Panel/Control/GridContainer"]
margin_top = 56.0
margin_right = 561.0
margin_bottom = 87.0
text = "Planet
Name "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="Prediction" parent="." instance=ExtResource( 6 )]

[node name="Controller" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Sun" parent="Controller" instance=ExtResource( 3 )]
mass = 0.01
p_mass = 3e+06

[node name="Planet" parent="Controller" instance=ExtResource( 4 )]
position = Vector2( 0, 3700 )
current_velocity = Vector2( 3200, 400 )
p_mass = 100000.0

[node name="Moon" parent="Controller" instance=ExtResource( 9 )]
position = Vector2( 0, 3550 )
current_velocity = Vector2( 3500, 400 )
p_mass = 10.0

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 10, 10 )
script = ExtResource( 7 )
[connection signal="toggled" from="CanvasLayer/Panel/Control/CheckButton" to="Controller" method="_on_CheckButton_toggled"]
[connection signal="value_changed" from="CanvasLayer/Panel/Control/GridContainer/HBoxContainer/Mass" to="UI" method="_on_Mass_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Panel/Control/GridContainer/HBoxContainer/VBoxContainer2/X" to="UI" method="_on_X_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Panel/Control/GridContainer/HBoxContainer/VBoxContainer2/Y" to="UI" method="_on_Y_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Panel/Control/GridContainer/HBoxContainer/VBoxContainer/X" to="UI" method="_on_X_vel_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Panel/Control/GridContainer/HBoxContainer/VBoxContainer/Y" to="UI" method="_on_Y_vel_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Panel/Control/GridContainer/HBoxContainer/VBoxContainer3/DistanceMultiplier" to="UI" method="_on_DistanceMultiplier_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Panel/Control/GridContainer/HBoxContainer/VBoxContainer3/BigG" to="UI" method="_on_BigG_value_changed"]
